[project]
name = "fussballtimer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "spotipy>=2.25.1",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
